# PlanagerDB

./: .env  .gitignore  Cargo.toml  plan.xml
.github/workflows/: rust.yml
planager-cli/: Cargo.toml
planager-cli/src/: main.rs
planager-data/: Cargo.toml
planager-data/migrations/init/: up.sql
planager-data/src/: database.rs  insert.rs  lib.rs  queries.rs  sanitize.rs  schema.rs
planager-parser/: Cargo.toml
planager-parser/src/: lib.rs
src/: main.rs
